<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Books</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- TItle for the activity to edit an existing book -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_general_info">Book Info</string>
    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_book_type">Book Type</string>
    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_info">Supplier\'s Info</string>
    <!-- category label for the editor activity delete button -->
    <string name="category_delete_label">Delete this Book</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>
    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier">Name</string>
    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_phone_number">Phone Number</string>

    <!-- Text hint for the price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Book Price</string>
    <!-- Text hint for the quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Label for dropdown menu option if the book type is a hardcover[CHAR LIMIT=20] -->
    <string name="book_type_hardcover">Hardcover</string>
    <!-- Label for dropdown menu option if the book type is a paperback[CHAR LIMIT=20] -->
    <string name="book_type_paperback">Paperback</string>
    <!-- Label for dropdown menu option if the book type is an electronic book [CHAR LIMIT=20] -->
    <string name="book_type_electronic">Electronic</string>


    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>
    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Tools text for itembook.xml -->
    <string name="item_book_title">The Godfather Returns</string>
    <string name="item_book_price">$50.00</string>

    <!--Text for empty book catalog listings -->
    <string name="empty_view_title_text">We sell books, not empty shelves.</string>
    <string name="empty_view_subtitle_text">So, start adding some books by clicking the round button on the right-bottom corner..\n\nIt is important to NEVER leave these information blank: Book Title, Price, and Quantity\n\nThe rest are optional...</string>


    <!-- Text Labels on what type of book to display for list books items -->
    <string name="item_book_type_hardcover">HARDCOVER</string>
    <string name="item_book_type_paperback">PAPERBACK</string>
    <string name="item_book_type_electronic">ELECTRONIC</string>

    <!-- Monetary unit for the price field in the editor activity. For Euros, replace the "$" with "\u20ac" or vice versa -->
    <string name="editor_monetary_unit">$</string>

    <!-- Toast Messages for the editor activity when data is saved into the database as INSERT or UPDATE -->
    <string name="editor_toast_message_insert">You have successfully added the new book</string>
    <string name="editor_toast_message_update">You have successfully updated the book information</string>
    <string name="editor_toast_message_delete">You have successfully deleted the book</string>

    <!-- Toast Messages for the editor activity when user accidentally press save with a blank editor-->
    <string name="editor_toast_message_blank">Oh-uh, I did say "NEVER" leave the first three \"Book Info\" blank. </string>

    <!-- Discard changes dialog messages -->
    <string name="unsaved_dialog_msg">Discard your changes and quit</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- message to let the user know that the quantity is at its lowest -->
    <string name="editor_quantity_lowest">The quantity for this book is now 0.</string>
    <string name="editor_quantity_change_inventory_success">Quantity Updated</string>




</resources>
