<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_general_info" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Book Title field -->
            <EditText
                android:id="@+id/edit_book_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/edit_monetary_unit"
                    android:text="@string/editor_monetary_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_price"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </LinearLayout>
            <!-- Quantity field -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/edit_quantity_minus"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:src="@drawable/ic_minus"
                    android:scaleType="fitXY"/>

                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="80dp"
                    android:layout_toEndOf="@id/edit_quantity_minus"
                    android:gravity="center"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                <ImageButton
                    android:id="@+id/edit_quantity_plus"
                    android:layout_width="60dp"
                    android:clickable="true"
                    android:layout_toEndOf="@id/edit_book_quantity"
                    android:src="@drawable/ic_plus"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- Book Type category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book_type" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <!-- Book Type drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_supplier_phone_type"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:baselineAligned="false"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_info" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="4dp">


            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_book_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="Mario Puzo" />

            <!-- Supplier Phone field -->
                <EditText
                    android:id="@+id/edit_book_supplier_phone_number"
                    style="@style/EditorFieldStyle"
                    android:layout_weight="3"
                    android:hint="@string/hint_book_supplier_phone_number"
                    android:inputType="phone"
                    android:drawableRight="@drawable/ic_phone"
                    android:drawablePadding="@dimen/item_tv_text_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    tools:text="999-999-9999" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/editor_img_btn_trash"
        android:src="@drawable/ic_trash"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        />

</LinearLayout>
